[package]
name = "web3_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-macros = "0.4.0"
eyre = "0.6.10"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.34.0", features = ["full"] }
ethers = { version = "2.0.11", features = ["rustls"] }
reqwest = { version = "0.11", features = ["json"] }
